<resources>
    <string name="app_name">MIUI 主题工具</string>

    <string name="apply_theme">应用主题</string>
    <string name="get_direct_link">提取直链</string>
    <string name="app_how">App 原理</string>
    <string name="github_src">GitHub 开源</string>
    <string name="coolapk_me">酷安 @Yaong</string>

    <string name="how_to_use">使用步骤</string>
    <string name="step_1">(1.) 点击按钮，选择你需要应用的主题. </string>
    <string name="select_file">选择文件</string>
    <string name="step_2">(2.) 点击 \"应用主题\" 按钮. </string>
    <!-- string name = "apply_theme" -->

    <!-- string name = "get_direct_link" -->
    <string name="please_input_theme_link_below">请在下方输入主题链接</string>
    <string name="miui_theme_link_or_text">MIUI 主题分享链接 / 文字</string>

    <string name="get_info_or_download_file">获取信息 / 下载文件</string>
    <string name="none_china_ip_set_proxy">非大陆 ip，设置代理服务器</string>

    <string name="set_proxy">设置代理</string>
    <string name="proxy_info">
        由于小米官方的限制
        \n非中国大陆地区 ip 无法直接获取
        \n故提供了简单的内置代理选项
        \n你可以在这里找到中国地区的代理：
        \nhttps://www.xicidaili.com/nt/
    </string>
    <string name="proxy_address">代理服务器地址</string>
    <string name="diver">:</string>
    <string name="proxy_port">端口号</string>
    <string name="proxy_method">代理方式：</string>
    <string name="method_socks4_5">Socks 4 / 5</string>
    <string name="method_http">HTTP</string>
    <string name="test_proxy">测试代理可用性</string>
    <string name="save_proxy_config">保存代理设置</string>
    <string name="clean_proxy_config">清空配置</string>

    <string name="theme_share_site">主题分享站</string>
    <string name="warning_about_vpn">（警告：大部分站点需要爬墙）</string>

    <!-- string name = "app_how" -->
    <string name="app_how_it_works">
        * 关于应用主题：
        \n在 MIUI 主题商店中，官方预留了一个接口
        \n用于主题设计师测试主题，它可应用任意主题
        \n本 App 的则利用了这一接口，向其发送请求
        \n从而达到应用三方主题的目的

        \n\n * 关于提取直链：
        \n以下面的主题链接为例
        \nhttp://zhuti.xiaomi.com/detail/d555981b-e6af-4ea9-9eb2-e47cfbc3edfa
        \n其中，/detal/ 后方的字符为主题 Token
        \n只需向如下官方 API 发起请求
        \nhttps://thm.market.xiaomi.com/thm/download/v2
        \n在其后面带上主题 Token 与特定参数
        \n其返回的 JSON 中就存在主题下载链接

        \n\n * 下面是一个例子：
        \nhttps://thm.market.xiaomi.com/thm/download/v2/d555981b-e6af-4ea9-9eb2-e47cfbc3edfa?miuiUIVersion=V11
    </string>

    <string name="theme_sites_title">主题分享站</string>
    <string name="official_theme_store">小米主题商店</string>
    <string name="miui_themes_tk">MIUIThemes.TK</string>
    <string name="techruchi_com">techruchi.com</string>
    <string name="miui_themes_xiaomis">MIUI Themes Xiaomis</string>
    <string name="miui_themez">Miui Themez</string>

    <string name="miui_version">MIUI 版本：</string>
    <string name="miui_version_v10">v10</string>
    <string name="miui_version_v11">v11</string>
    <string name="miui_version_v12">v12</string>

    <string name="process_please_wait">正在处理中, 请稍候…</string>
</resources>
