<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="21dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="9dp"
        android:drawableStart="@drawable/ic_baseline_send_24"
        android:drawablePadding="7dp"
        android:text="@string/set_proxy"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:autoLink="all"
        android:text="@string/proxy_info"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_proxy_address"
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:hint="@string/proxy_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/diver"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_proxy_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/proxy_port">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:checkedButton="@id/rb_socks"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/proxy_method"
            android:textSize="19sp" />

        <RadioGroup
            android:id="@+id/rg_proxy_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_socks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="9dp"
                android:text="@string/method_socks4_5" />

            <RadioButton
                android:id="@+id/rb_http"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/method_http" />
        </RadioGroup>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_test_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_proxy"
        app:icon="@drawable/ic_baseline_send_24"
        app:iconGravity="textStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_save_proxy_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_proxy_config"
        app:icon="@drawable/ic_baseline_save_24"
        app:iconGravity="textStart" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_clean_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clean_proxy_config"
        app:icon="@drawable/ic_baseline_delete_sweep_24"
        app:iconGravity="textStart" />
</LinearLayout>