<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginVertical="24dp"
        android:drawablePadding="7dp"
        android:text="@string/get_direct_link"
        android:textSize="19sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_insert_link_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="9dp"
        android:text="@string/please_input_theme_link_below"
        android:textSize="17sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_inputThemeLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="9dp"
        android:hint="@string/miui_theme_link_or_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/miui_version"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/rg_miui_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_miui_12"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_miui_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="9dp"
                android:text="@string/miui_version_v10" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_miui_11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="9dp"
                android:text="@string/miui_version_v11" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_miui_12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="9dp"
                android:text="@string/miui_version_v12" />
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_getDirectLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:text="@string/get_info_or_download_file"
        app:icon="@drawable/ic_file_download_black_24dp"
        app:iconGravity="textStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_set_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="9dp"
        android:text="@string/none_china_ip_set_proxy"
        app:icon="@drawable/ic_baseline_send_24"
        app:iconGravity="textStart" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_themeShareSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="9dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:text="@string/theme_share_site"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_public_black_24dp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:padding="9dp"
        android:text="@string/warning_about_vpn"
        android:textSize="17sp"
        app:drawableStartCompat="@drawable/ic_warning_black_24dp" />
</LinearLayout>
