<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="21dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="3dp"
            android:src="@drawable/ic_info_outline_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:text="@string/how_to_use"
            android:textSize="19sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/step_1"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_chooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:paddingHorizontal="17dp"
        android:text="@string/select_file"
        android:textSize="15sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_insert_drive_file_black_24dp"
        app:iconGravity="textStart"
        app:iconSize="17dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/step_2"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_applyTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:paddingHorizontal="17dp"
        android:text="@string/apply_theme"
        android:textSize="15sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_settings_black_24dp"
        app:iconGravity="textStart"
        app:iconSize="17dp" />

    <TextView
        android:id="@+id/tv_filePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:textSize="17sp" />
</LinearLayout>