<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:drawableStart="@mipmap/ic_launcher"
        android:drawablePadding="13dp"
        android:layout_marginStart="21dp"
        android:layout_marginVertical="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="21sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <TextView
            android:drawableStart="@drawable/ic_brush_black_24dp"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_theme"
            android:textSize="19sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_getDirectLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <TextView
            android:drawableStart="@drawable/ic_insert_link_black_24dp"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_direct_link"
            android:textSize="19sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_learnHow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <TextView
            android:drawableStart="@drawable/ic_description_black_24dp"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_how"
            android:textSize="19sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_exploreGithub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <TextView
            android:drawableStart="@drawable/ic_explore_black_24dp"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github_src"
            android:textSize="19sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_meInCoolapk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="6dp">

        <TextView
            android:drawableStart="@drawable/ic_info_outline_black_24dp"
            android:drawablePadding="13dp"
            android:padding="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coolapk_me"
            android:textSize="19sp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
